--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "compile": "vinxi build && bun run start"
   },
   "dependencies": {
+    "@ark-ui/solid": "^5.30.0",
+    "@corvu/drawer": "^0.2.4",
+    "@corvu/otp-field": "^0.1.4",
+    "@corvu/resizable": "^0.2.5",
     "@fontsource/inter": "^5.2.8",
     "@kobalte/core": "^0.13.11",
     "@solidjs/meta": "^0.29.4",
@@ -18,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.1.2",
+    "embla-carousel-solid": "^8.6.0",
     "install": "^0.13.0",
     "nanoid": "^5.1.6",
     "solid-js": "^1.9.10",
